# gee2gpd

./: MANIFEST.in  README.md  dev-environment.yml  pyproject.toml
.github/workflows/: deploy.yml  lint.yml
gee2gpd/: __init__.py  convert.py  dfutils.py  main.py
src/: cli.py  gee2gpd.py  helpers.py
src/gee2gpd/: __init__.py  __main__.py  core.py
tests/: test_core.py
